Pull request support

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,15 @@ jdk: oraclejdk8
 sudo: false
 cache:
   directories:
-  - $HOME/.m2
-  - $HOME/.sonar/cache
+  - "$HOME/.m2"
+  - "$HOME/.sonar/cache"
 addons:
   sonarqube: true
 env:
   global:
   - secure: pI0+f18LW15cjtGZK9/Hfb6xd9Hzalf/FMWVh0xJ7BEpfaZ6v/cCREJUhr4KBVY3wv+VIgmOD8/gmJvIID15bi/p1bLTxlVSHG4PJa64w4WTQED0SqZXij/qaLoDaDQd5+zL7v8Wq7GpqZCuHIdOgiHTSBGHoVlYkirvBBxbesk=
+  - secure: iQpKKXbwkmjUOi+UKvRI7y36OORykHu6wsWDyZfm/sgDfMTY2zRBBa7X1VTrCpmvQqEseJzrU+DorB9vsP83leF1VPdHPOwpvkbjmqMS6i9g/9HQqJWb+idJEl3SachpztMNLNYRcOJg5pLeuqTkQSDzp2H5DiJwGtb734bDEKw=
 script:
 - jdk_switcher use oraclejdk8
-- mvn sonar:sonar -Dsonar.login=$SONAR_TOKEN
+- if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then export SONAR_PULL_REQUEST="-Dsonar.analysis.mode=preview -Dsonar.github.pullRequest=$TRAVIS_PULL_REQUEST -Dsonar.github.repository=$TRAVIS_REPO_SLUG -Dsonar.github.oauth=$GITHUB_TOKEN"; fi
+- mvn sonar:sonar -Dsonar.login=$SONAR_TOKEN $SONAR_PULL_REQUEST
