--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,9 @@ env:
   - secure: WZwHwifyIrOFWA06HU18+n5momE68IZaW5YEKzKgznVT8rU4wOYDS7QvWJShATGyqGGc4stsVFigCOo4fe1zCw0WQpo9qu1R5zlw2jatLuTWj/BOjhA6JVr133MN4EmueiPvZqKI5icBz3UNxA42Fxzo4ku1til+0jpwI6QlkoI=
 install:
 - mvn dependency:go-offline
+before_script:
+- mvn clean 
 script:
-- mvn clean install site
+- mvn install site
 after_success:
 - mvn sonar:sonar
