--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,8 @@ script:
 - mvn install site
 after_success:
 - mvn sonar:sonar
+- if [[ ! $TRAVIS_PULL_REQUEST =~ ^[0-9]+$ ]]; then mvn site-deploy fi
+before_install:
+- openssl aes-256-cbc -K $encrypted_65553d4eaa33_key -iv $encrypted_65553d4eaa33_iv
+  -in deploy-keys.tar.enc -out deploy-keys.tar -d
+- tar xf deploy-keys.tar -C $HOME
