--- a/pom.xml
+++ b/pom.xml
@@ -218,15 +218,15 @@
                     <version>1.2</version>
                     <configuration>
                         <excludedLinks>
-                            <excludedLink>../*/</excludedLink>
-                            <excludedLink>./images/*</excludedLink>
-                            <excludedLink>images/*</excludedLink>
                             <excludedLink>http://i.trajano.net/**</excludedLink>
+                            <excludedLink>http://mojo.codehaus.org/**</excludedLink>
+                            <excludedLink>http://search.maven.org/</excludedLink>
+                            <excludedLink>http://www.sonatype.com/public-parent/nexus-maven-plugins/nexus-staging/nexus-staging-maven-plugin/</excludedLink>
+                            <excludedLink>https://git-scm.org/**</excludedLink>
                             <excludedLink>https://i.trajano.net/**</excludedLink>
                             <excludedLink>https://oss.sonatype.org/service/local/staging/deploy/maven2/</excludedLink>
-                            <excludedLink>http://www.sonatype.com/public-parent/nexus-maven-plugins/nexus-staging/nexus-staging-maven-plugin/</excludedLink>
-                            <excludedLink>https://drone.io/</excludedLink>
-                            <excludedLink>http://search.maven.org/</excludedLink>
+                            <excludedLink>https://travis-ci.org/**</excludedLink>
+                            <excludedLink>https://www.linkedin.com/**</excludedLink>
                         </excludedLinks>
                     </configuration>
                 </plugin>
