--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+branches:
+  only:
+  - master
 language: java
 jdk:
 - oraclejdk8
@@ -23,7 +26,7 @@ script:
 - mvn install site
 after_success:
 - mvn sonar:sonar
-- if [[ ! $TRAVIS_PULL_REQUEST =~ ^[0-9]+$ ]]; then mvn site-deploy fi
+- if [[ ! $TRAVIS_PULL_REQUEST =~ ^[0-9]+$ ]]; then mvn site-deploy ; fi
 before_install:
 - openssl aes-256-cbc -K $encrypted_65553d4eaa33_key -iv $encrypted_65553d4eaa33_iv
   -in deploy-keys.tar.enc -out deploy-keys.tar -d
