--- a/pom.xml
+++ b/pom.xml
@@ -199,9 +199,9 @@
                         <show>private</show>
                         <doclet>org.jboss.apiviz.APIviz</doclet>
                         <docletArtifact>
-                            <groupId>com.grahamedgecombe.apiviz</groupId>
+                            <groupId>net.trajano.apiviz</groupId>
                             <artifactId>apiviz</artifactId>
-                            <version>1.3.3</version>
+                            <version>1.3.4-SNAPSHOT</version>
                         </docletArtifact>
                         <additionalparam>-sourceclasspath ${project.build.outputDirectory}</additionalparam>
                     </configuration>
