--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 branches:
   only:
   - master
+  - /^trajano-[\d\.]+$/
 language: java
 jdk:
 - oraclejdk8
 sudo: false
 cache:
   directories:
-  - "$HOME/.m2"
+  - "$HOME/.m2/repository"
   - "$HOME/.sonar/cache"
 addons:
   apt:
@@ -18,16 +19,27 @@ env:
   global:
   - secure: pI0+f18LW15cjtGZK9/Hfb6xd9Hzalf/FMWVh0xJ7BEpfaZ6v/cCREJUhr4KBVY3wv+VIgmOD8/gmJvIID15bi/p1bLTxlVSHG4PJa64w4WTQED0SqZXij/qaLoDaDQd5+zL7v8Wq7GpqZCuHIdOgiHTSBGHoVlYkirvBBxbesk=
   - secure: WZwHwifyIrOFWA06HU18+n5momE68IZaW5YEKzKgznVT8rU4wOYDS7QvWJShATGyqGGc4stsVFigCOo4fe1zCw0WQpo9qu1R5zlw2jatLuTWj/BOjhA6JVr133MN4EmueiPvZqKI5icBz3UNxA42Fxzo4ku1til+0jpwI6QlkoI=
+before_install:
+- openssl aes-256-cbc -K $encrypted_65553d4eaa33_key -iv $encrypted_65553d4eaa33_iv
+  -in deploy-keys.tar.enc -out deploy-keys.tar -d
 install:
+- tar xf deploy-keys.tar -C $HOME && chmod go-rwx -R $HOME/.m2 $HOME/.ssh
 - mvn dependency:go-offline
 before_script:
 - mvn clean
 script:
-- mvn install site
+- mvn verify site
 after_success:
 - mvn sonar:sonar
-- if [[ ! $TRAVIS_PULL_REQUEST =~ ^[0-9]+$ ]]; then mvn deploy site-deploy ; fi
-before_install:
-- openssl aes-256-cbc -K $encrypted_65553d4eaa33_key -iv $encrypted_65553d4eaa33_iv
-  -in deploy-keys.tar.enc -out deploy-keys.tar -d
-- tar xf deploy-keys.tar -C $HOME
+deploy:
+- provider: script
+  skip_cleanup: true
+  script: mvn deploy site-deploy
+  on:
+    branch: master
+- provider: script
+  skip_cleanup: true
+  script: printf 'scm.tag=%1s\nscm.url=scm:git:https://git@github.com/%2s.git' "${TRAVIS_TAG}"
+    "${TRAVIS_REPO_SLUG}" > release.properties && mvn release:perform
+  on:
+    tags: true
