--- a/pom.xml
+++ b/pom.xml
@@ -46,8 +46,8 @@
         <maven>3.0.5</maven>
     </prerequisites>
     <scm>
-        <connection>scm:git:https://github.com/trajano/${repo.id}</connection>
-        <developerConnection>scm:git:ssh://git@github.com/trajano/${repo.id}.git</developerConnection>
+        <connection>scm:git:https://github.com/trajano/${repo.id}.git</connection>
+        <developerConnection>scm:git:https://github.com/trajano/${repo.id}.git</developerConnection>
         <tag>HEAD</tag>
         <url>https://github.com/trajano/${repo.id}</url>
     </scm>
@@ -296,6 +296,11 @@
                             <version>${maven-scm-provider-jgit.version}</version>
                         </dependency>
                     </dependencies>
+                    <configuration>
+                        <providerImplementations>
+                            <git>jgit</git>
+                        </providerImplementations>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <artifactId>maven-site-plugin</artifactId>
