--- a/pom.xml
+++ b/pom.xml
@@ -218,6 +218,7 @@
               <excludedPage>source-repository.html</excludedPage>
             </excludedPages>
             <excludedLinks>
+              <excludedLink>../**</excludedLink>
               <excludedLink>images/*</excludedLink>
               <excludedLink>http://i.trajano.net/**</excludedLink>
               <excludedLink>http://docs.sonarqube.org/display/PLUG/Plugin+Library/sonar-maven-plugin</excludedLink>
@@ -498,7 +499,6 @@
             <reports>
               <report>cim</report>
               <report>dependencies</report>
-              <report>dependency-convergence</report>
               <report>dependency-info</report>
               <report>dependency-management</report>
               <report>distribution-management</report>
