--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,12 @@ addons:
   apt:
     packages:
     - graphviz
-  sonarqube: true
+  sonarqube:
+    organization: trajano
+    token:
+      secure: YnJoL7AhM3OJeW8mGfyd5tUjlVwHRFFoV5LW8L6y/FaMZJ4P22yCMO3lu37B9U3n33emMxB2U3T1GUdBrF3ldyHrrSjOmdIGd6cq+ZvzB+cC4LTyy8cvhKmkaULiQf1Cqvwlrzc8jJ6L6jEduT6DW9AsodtMyebVePOR2rw2sSI=
 env:
   global:
-  - secure: pI0+f18LW15cjtGZK9/Hfb6xd9Hzalf/FMWVh0xJ7BEpfaZ6v/cCREJUhr4KBVY3wv+VIgmOD8/gmJvIID15bi/p1bLTxlVSHG4PJa64w4WTQED0SqZXij/qaLoDaDQd5+zL7v8Wq7GpqZCuHIdOgiHTSBGHoVlYkirvBBxbesk=
   - secure: WZwHwifyIrOFWA06HU18+n5momE68IZaW5YEKzKgznVT8rU4wOYDS7QvWJShATGyqGGc4stsVFigCOo4fe1zCw0WQpo9qu1R5zlw2jatLuTWj/BOjhA6JVr133MN4EmueiPvZqKI5icBz3UNxA42Fxzo4ku1til+0jpwI6QlkoI=
 before_install:
 - openssl aes-256-cbc -K $encrypted_65553d4eaa33_key -iv $encrypted_65553d4eaa33_iv
