--- a/pom.xml
+++ b/pom.xml
@@ -214,6 +214,24 @@
         <plugin>
           <artifactId>maven-linkcheck-plugin</artifactId>
           <version>1.2</version>
+          <dependencies>
+            <dependency>
+              <groupId>net.trajano.maven.doxia</groupId>
+              <artifactId>doxia-linkcheck</artifactId>
+              <version>1.3.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+              <groupId>org.apache.maven.doxia</groupId>
+              <artifactId>doxia-linkcheck</artifactId>
+              <version>1.2</version>
+              <exclusions>
+                <exclusion>
+                  <groupId>org.apache.maven.doxia</groupId>
+                  <artifactId>doxia-linkcheck</artifactId>
+                </exclusion>
+              </exclusions>
+            </dependency>
+          </dependencies>
           <configuration>
             <excludedPages>
               <excludedPage>source-repository.html</excludedPage>
