--- a/pom.xml
+++ b/pom.xml
@@ -200,7 +200,7 @@
             <show>private</show>
             <doclet>org.jboss.apiviz.APIviz</doclet>
             <docletArtifact>
-              <groupId>net.trajano.apiviz</groupId>
+              <groupId>com.grahamedgecombe.apiviz</groupId>
               <artifactId>apiviz</artifactId>
               <version>1.3.4</version>
             </docletArtifact>
