--- a/pom.xml
+++ b/pom.xml
@@ -212,24 +212,14 @@
           <version>2.5</version>
         </plugin>
         <plugin>
-          <artifactId>maven-linkcheck-plugin</artifactId>
-          <version>1.2</version>
+          <groupId>net.trajano.mojo</groupId>
+          <artifactId>linkcheck-maven-plugin</artifactId>
+          <version>1.3.0</version>
           <configuration>
-            <excludedPages>
-              <excludedPage>source-repository.html</excludedPage>
-            </excludedPages>
             <excludedLinks>
               <excludedLink>../**</excludedLink>
               <excludedLink>images/*</excludedLink>
-              <excludedLink>http://i.trajano.net/**</excludedLink>
-              <excludedLink>http://docs.sonarqube.org/display/PLUG/Plugin+Library/sonar-maven-plugin</excludedLink>
-              <excludedLink>http://git-scm.com/**</excludedLink>
-              <excludedLink>http://mojo.codehaus.org/**</excludedLink>
-              <excludedLink>http://search.maven.org/</excludedLink>
-              <excludedLink>http://www.sonatype.com/public-parent/nexus-maven-plugins/nexus-staging/nexus-staging-maven-plugin/</excludedLink>
               <excludedLink>https://i.trajano.net/**</excludedLink>
-              <excludedLink>https://oss.sonatype.org/service/local/staging/deploy/maven2/</excludedLink>
-              <excludedLink>https://travis-ci.org/**</excludedLink>
               <excludedLink>https://www.linkedin.com/**</excludedLink>
             </excludedLinks>
           </configuration>
@@ -493,7 +483,8 @@
         <artifactId>maven-jxr-plugin</artifactId>
       </plugin>
       <plugin>
-        <artifactId>maven-linkcheck-plugin</artifactId>
+        <groupId>net.trajano.mojo</groupId>
+        <artifactId>linkcheck-maven-plugin</artifactId>
       </plugin>
       <plugin>
         <artifactId>maven-project-info-reports-plugin</artifactId>
