--- a/pom.xml
+++ b/pom.xml
@@ -194,19 +194,20 @@
         <plugin>
           <groupId>net.trajano.mojo</groupId>
           <artifactId>linkcheck-maven-plugin</artifactId>
-          <version>1.3.0</version>
+          <version>1.3.1</version>
           <configuration>
             <excludedPages>
               <excludedPage>plugin-management.html</excludedPage>
             </excludedPages>
+            <excludedHttpStatusErrors>
+              <excludedHttpStatusError>401</excludedHttpStatusError>
+            </excludedHttpStatusErrors>
             <excludedLinks>
               <excludedLink>../**</excludedLink>
               <excludedLink>images/icon_success_sml.gif</excludedLink>
               <excludedLink>images/icon_warning_sml.gif</excludedLink>
               <excludedLink>http://search.maven.org/</excludedLink>
               <excludedLink>https://i.trajano.net/**</excludedLink>
-              <excludedLink>https://oss.sonatype.org/content/repositories/snapshots/</excludedLink>
-              <excludedLink>https://oss.sonatype.org/service/local/staging/deploy/maven2/</excludedLink>
               <excludedLink>https://www.linkedin.com/**</excludedLink>
             </excludedLinks>
           </configuration>
