--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.trajano</groupId>
   <artifactId>trajano</artifactId>
-  <version>14-SNAPSHOT</version>
+  <version>14</version>
   <packaging>pom</packaging>
   <name>Trajano</name>
   <description>Trajano is an IT Consulting/Contracting firm specialising in end-to-end enterprise architecture.</description>
@@ -48,7 +48,7 @@
   <scm>
     <connection>scm:git:https://github.com/trajano/${repo.id}.git</connection>
     <developerConnection>scm:git:https://github.com/trajano/${repo.id}.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>trajano-14</tag>
     <url>https://github.com/trajano/${repo.id}</url>
   </scm>
   <issueManagement>
@@ -192,27 +192,6 @@
           <version>2.5</version>
         </plugin>
         <plugin>
-          <groupId>net.trajano.mojo</groupId>
-          <artifactId>linkcheck-maven-plugin</artifactId>
-          <version>1.3.1</version>
-          <configuration>
-            <excludedPages>
-              <excludedPage>plugin-management.html</excludedPage>
-            </excludedPages>
-            <excludedHttpStatusErrors>
-              <excludedHttpStatusError>401</excludedHttpStatusError>
-            </excludedHttpStatusErrors>
-            <excludedLinks>
-              <excludedLink>../**</excludedLink>
-              <excludedLink>images/icon_success_sml.gif</excludedLink>
-              <excludedLink>images/icon_warning_sml.gif</excludedLink>
-              <excludedLink>http://search.maven.org/</excludedLink>
-              <excludedLink>https://i.trajano.net/**</excludedLink>
-              <excludedLink>https://www.linkedin.com/**</excludedLink>
-            </excludedLinks>
-          </configuration>
-        </plugin>
-        <plugin>
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>2.9</version>
           <configuration>
@@ -286,6 +265,27 @@
           <groupId>net.trajano.mojo</groupId>
           <artifactId>cleanpom-maven-plugin</artifactId>
           <version>1.2.1</version>
+        </plugin>
+        <plugin>
+          <groupId>net.trajano.mojo</groupId>
+          <artifactId>linkcheck-maven-plugin</artifactId>
+          <version>1.3.1</version>
+          <configuration>
+            <excludedPages>
+              <excludedPage>plugin-management.html</excludedPage>
+            </excludedPages>
+            <excludedHttpStatusErrors>
+              <excludedHttpStatusError>401</excludedHttpStatusError>
+            </excludedHttpStatusErrors>
+            <excludedLinks>
+              <excludedLink>../**</excludedLink>
+              <excludedLink>images/icon_success_sml.gif</excludedLink>
+              <excludedLink>images/icon_warning_sml.gif</excludedLink>
+              <excludedLink>http://search.maven.org/</excludedLink>
+              <excludedLink>https://i.trajano.net/**</excludedLink>
+              <excludedLink>https://www.linkedin.com/**</excludedLink>
+            </excludedLinks>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>net.trajano.mojo</groupId>
