--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
     - EMAIL=arch@trajano.net
     - URL=trajano.net
-    - SUBDOMAINS=www,i
+    - SUBDOMAINS=www,i,site
     - TZ=America/Toronto
     depends_on:
     - mysql
