--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,12 @@ services:
     ports:
     - "80:80"
     - "443:443"
+  sftpd:
+    build: ./sftpd
+    volumes:
+    - d:/dv/www/site:/home/site/s
+    ports:
+    - "6022:22"
   mysql:
     #image: mariadb:10.3
     build: ./mysql
