--- a/pom.xml
+++ b/pom.xml
@@ -360,11 +360,29 @@
         <artifactId>cleanpom-maven-plugin</artifactId>
         <executions>
           <execution>
-            <id>clean</id>
+            <id>clean-pom</id>
             <goals>
-              <goal>clean-xml</goal>
               <goal>clean</goal>
             </goals>
+          </execution>
+          <execution>
+            <id>clean-xml</id>
+            <goals>
+              <goal>clean-xml</goal>
+            </goals>
+            <configuration>
+              <xmlFileSets>
+                <xmlFileSet>
+                  <directory>${basedir}</directory>
+                  <includes>
+                    <include>src/**/*.wsdl</include>
+                    <include>src/**/*.xsd</include>
+                    <include>src/**/*.xml</include>
+                    <include>src/**/*.xhtml</include>
+                  </includes>
+                </xmlFileSet>
+              </xmlFileSets>
+            </configuration>
           </execution>
         </executions>
       </plugin>
@@ -509,6 +527,26 @@
             </plugin>
           </plugins>
         </pluginManagement>
+        <plugins>
+          <plugin>
+            <groupId>net.trajano.mojo</groupId>
+            <artifactId>m2e-codestyle-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>configure</goal>
+                </goals>
+              </execution>
+            </executions>
+            <dependencies>
+              <dependency>
+                <groupId>net.trajano</groupId>
+                <artifactId>coding-standards</artifactId>
+                <version>${coding-standards.version}</version>
+              </dependency>
+            </dependencies>
+          </plugin>
+        </plugins>
       </build>
     </profile>
     <profile>
