--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -3,6 +3,7 @@ FROM linuxserver/letsencrypt
 #    php7-fpm \
 #    php7-mysqlnd \
 #  && rm -rf /var/cache/apk/*
-COPY site-confs/* /config/nginx/site-confs/
+# COPY site-confs/* /config/nginx/site-confs/
 COPY 00-wait-for-volume.sh /etc/cont-init.d/
+COPY conf.d/* /etc/nginx/conf.d/
 RUN chmod 700 /etc/cont-init.d/00-wait-for-volume.sh
