--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -1,2 +1,5 @@
 #FROM wordpress:php7.0-fpm-alpine
-FROM wordpress:php7.1-apache
+#FROM wordpress:php7.1-apache
+FROM php:apache
+ENV APACHE_DOCUMENT_ROOT /www
+VOLUME /www
