--- a/site/default.conf
+++ b/site/default.conf
@@ -1,10 +1,10 @@
+proxy_cache_path  /cache levels=1:2 keys_zone=STATIC:10m inactive=24h  max_size=1g;
 server {
     listen       80;
     server_name  localhost;
 
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
-
     root   /site;
     index  index.html index.htm;
     
@@ -12,12 +12,16 @@ server {
         return 301 https://site.trajano.net/trajano/;
     }
 
+
     location / {
         try_files $uri $uri/ @github;
     }
     location @github {
-        proxy_pass http://trajano.github.io;
+        proxy_pass https://trajano.github.io;
         proxy_intercept_errors on;
+        # proxy_set_header       Host $host;
+        proxy_cache            STATIC;
+        proxy_cache_valid      200  1d;
         expires off;
     }
     error_page   500 502 503 504  /50x.html;
